# File-Structure

./: README.md
backend/hospital/: .gitignore  main.py  pyproject.toml
backend/hospital/config/: database.py
backend/hospital/models/: schemas.py
backend/hospital/routes/: auth.py
backend/hospital/utils/: auth.py
frontend/hospital/: package-lock.json
frontend/hospital/src/app/: page.tsx
frontend/hospital/src/components/: LoginPage.tsx
frontend/hospital/src/services/: authService.ts
